--- a/Tests/Fixtures/SenegalBaseline/Resources/Private/Translations/en/Presentation/Cards.xlf
+++ b/Tests/Fixtures/SenegalBaseline/Resources/Private/Translations/en/Presentation/Cards.xlf
@@ -2,11 +2,11 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
   <file original="" product-name="Two13Tec.Senegal" source-language="en" datatype="plaintext">
     <body>
-      <trans-unit id="cards.authorPublishedBy" xml:space="preserve">
-        <source>Published by {authorName}</source>
-      </trans-unit>
       <trans-unit id="cards.moreButton" xml:space="preserve">
         <source>More</source>
+      </trans-unit>
+      <trans-unit id="cards.placeholderWarning" xml:space="preserve">
+        <source>Placeholder {name}</source>
       </trans-unit>
     </body>
   </file>
